--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,12 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "project-name"
+name = "qwrapper"
 version = "0.1.0"
-description = "Project description"
+description = "Qwrapper"
 authors = ["Daniel Dybing <danieldy@uia.no>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
 
 [tool.poetry.dev-dependencies]
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
