--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,25 @@
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[tool.poetry]
+[tool.setuptools]
 name = "qwrapper"
 version = "0.1.13"
-description = "Qwrapper"
-authors = ["Daniel Dybing <danieldy@uia.no>"]
+description = "A QEMU wrapper for Python"
+author = "Daniel Dybing"
+author_email = "danieldy@uia.no"
 
-[tool.poetry.dependencies]
-python = "^3.9"
-
-[tool.poetry.dev-dependencies]
+[project]
+dependencies = [
+    "pygdbmi>=0.10.0.0",
+    "qemu.qmp>=0.5.0"
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+]
