--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,19 @@
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
+[project]
+license = { file = "LICENSE" }
 name = "qwrapper"
 version = "0.1.13"
-description = "Qwrapper"
-authors = ["Daniel Dybing <danieldy@uia.no>"]
+description = "A QEMU wrapper for Python"
+readme = "README.md"
+requires-python = ">=3.7"
+authors = [{ name = "Daniel Dybing", email = "danieldy@uia.no" },
+           { name = "Ali Sirvanovitsj Ismailov", email = "alisi18@uia.no",
+           { name = "Sirén Elise Lund Lohre", email = "selohre@uia.no"}]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-
-[tool.poetry.dev-dependencies]
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
