--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,10 +15,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install build
         pip install .
     - name: Build
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build
 
   test:
     needs: build
