--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,7 +17,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install build
         pip install .
-        sudo apt install -y gdb qemu-system-i386
     - name: Build
       run: |
         python -m build
@@ -37,6 +36,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         pip install .
+        sudo apt update
+        sudo apt install -y gdb qemu-system-i386
     - name: Test with pytest
       run: |
         pytest
