--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -40,4 +40,4 @@ jobs:
         sudo apt install -y gdb qemu-system-i386
     - name: Test with pytest
       run: |
-        pytest
+        pytest -v
