--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: self-hosted
     container:
-      image: ubuntu:latest
+      image: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -26,7 +26,7 @@ jobs:
     needs: build
     runs-on: self-hosted
     container:
-      image: ubuntu:latest
+      image: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
